--- a/res/BottomControlsDisplay.fxml
+++ b/res/BottomControlsDisplay.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.ChoiceBox?>
 <HBox xmlns:fx="http://javafx.com/fxml/1"
       xmlns="http://javafx.com/javafx/8.0.112"
       fx:controller="displays.BottomControlsDisplay"
@@ -13,7 +13,7 @@
     <padding>
         <Insets bottom="10.0" top="10.0"/>
     </padding>
-    <ComboBox fx:id="algorithmsComboBox" onAction="#onAlgorithmsComboBoxAction"/>
+    <ChoiceBox fx:id="algorithmsChoiceBox" onAction="#onAlgorithmsChoiceBoxAction"/>
     <Button text="Next Step" fx:id="nextStepButton" onAction="#onNextStepButtonAction"/>
     <Button text="Start Auto Next Step" fx:id="autoNextStepButton" onAction="#onAutoNextStepButtonAction"/>
     <Label text="ms">
