--- a/res/BottomControlsDisplay.fxml
+++ b/res/BottomControlsDisplay.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.ChoiceBox?>
 <HBox xmlns:fx="http://javafx.com/fxml/1"
       xmlns="http://javafx.com/javafx/8.0.112"
-      fx:controller="displays.BottomControlsDisplay"
+      fx:controller="controllers.BottomControlsController"
       alignment="CENTER" spacing="10.0">
     <padding>
         <Insets bottom="10.0" top="10.0"/>
