--- a/res/DataSetDisplay.fxml
+++ b/res/DataSetDisplay.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.Pane?>
 <Pane xmlns:fx="http://javafx.com/fxml/1"
       xmlns="http://javafx.com/javafx/8.0.112"
-      fx:controller="displays.DataSetDisplay"
+      fx:controller="controllers.DataSetController"
       prefHeight="300.0" prefWidth="600.0">
     <Canvas height="300.0" width="600.0" fx:id="dataSetCanvas"/>
 </Pane>
